<?xml version="1.0"?>
<package format="2">
  <name>tdk_robokit</name>
  <version>0.0.0</version>
  <description>The tdk_robokit package</description>
  <maintainer email="tdk-opensource@invensense.com">TDK-OpenSource</maintainer>
  <author email="tdk-opensource@invensense.com">TDK-OpenSource</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>redswallow</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>redswallow</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>redswallow</exec_depend>
</package>
